Ensure no wrapping of the Total sums to break the layout

--- a/scss/components/molecules/_molecules.total.scss
+++ b/scss/components/molecules/_molecules.total.scss
@@ -37,11 +37,13 @@
     &--income {
       color: $green;
       text-shadow: 0 0 3px $green;
+      white-space: nowrap;
     }
 
     &--expenses {
       color: darken($raspberry-red, 12%);
       text-shadow: 0 0 3px darken($raspberry-red, 12%);
+      white-space: nowrap;
     }
   }
 }
